Add outdated deployment summary API
